K8S_Manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wine-prediction-deployment
  labels:
    app: wine-prediction
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wine-prediction
  template:
    metadata:
      labels:
        app: wine-prediction
    spec:
      containers:
      - name: wine-prediction-model
        image: dakshsawhneyy/wine-pred-serve:latest
        ports:
        - containerPort: 8000
        livenessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 10
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 5
        resources:
          requests:
            cpu: "100m"  
            memory: "128Mi" 
          limits:
            cpu: "200m"  
            memory: "256Mi"
